--- a/src/Components/Dojo.css
+++ b/src/Components/Dojo.css
@@ -2,7 +2,7 @@
   margin: 1rem;
   height: 2rem;
   width: 50dvw;
-  background-color: #737373;
+  background-color: #813795;
   border-radius: 4px;
   display: flex;
 }
@@ -11,9 +11,11 @@
   margin: 8px;
   height: 1rem;
   width: 100%;
-  background-color: white;
+  background-color: #f6ecf8;
+  color: #813795;
+  font-weight: bold;
   border-radius: 2px;
   transition: 0.3s;
   text-align: center;
-  overflow: hidden;
+  position: relative;
 }
